# shipping_instruction

./: .gitignore  pyproject.toml
shipping_instruction/: __poetryscript__.py  browser.py  config.py  main.py  order.py  pdf.py  pms.py  user.py  util.py
shipping_instruction.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_main.py
