[tool.poetry]
name = "shipping_instruction"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.7"
selenium = "^3.141.0"
xlrd = "^1.2.0"
xlwt = "^1.3.0"

[tool.poetry.dev-dependencies]
autopep8 = "^1.5"
mypy = "^0.761"
pefile = "^2019.4.18"
pyinstaller = "^3.6"
pylint = "^2.4.4"
pywin32-ctypes = "^0.2.0"

[tool.poetry.scripts]
build = "shipping_instruction.__poetryscript__:clean_build"
exe = "shipping_instruction.__poetryscript__:run_exe"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
